src/objects/ints__EfxReport_Consumer_Statement__c.object
<CustomObject>
    <fields>
        <fullName>ints__DateReported__c</fullName>
        <label>DateReported</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateToBePurged__c</fullName>
        <label>DateToBePurged</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Consumer Statements</relationshipLabel>
        <relationshipName>EfxReport_Consumer_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Statement__c</fullName>
        <label>Statement</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Consumer Statement</label>
    <nameField>
        <displayFormat>EFX-CON-STATEMENT-{0000000000}</displayFormat>
        <label>EfxReport Consumer Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Consumer Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>